feat(auth): implement custom authentication entry point and update security configuration